alignment fixes

--- a/src/auth/login/login.component.css
+++ b/src/auth/login/login.component.css
@@ -117,6 +117,8 @@ input {
   color: white !important;
   font-size: 14px;
   outline: none;
+  padding-left: 0;
+
 }
 
 input::placeholder {
@@ -195,3 +197,9 @@ input::-ms-clear {
   display: none;
 } 
 
+.error-message{
+  color: rgb(219 84 84);
+    background-color: #d6d3d3;
+    opacity: 80;
+    padding-left: 62px;
+}
